# MariaDB-source-code

./: .gitignore  CMakeLists.txt  README  config.h.cmake  configure.cmake
client/: mysql.cc  mysqlbinlog.cc
cmake/: configure.pl  gcrypt.cmake  jemalloc.cmake  libarchive.cmake  quicklz.cmake  wsrep.cmake
include/: byte_order_generic_x86_64.h  hash.h  maria.h  my_atomic.h  my_sys.h  mysql.h.pp  mysql_com.h  thread_pool_priv.h
include/mysql/psi/: mysql_socket.h
libmysqld/: lib_sql.cc
mysql-test/: mysql-test-run.pl
mysql-test/include/: default_mysqld.cnf
mysql-test/r/: connect2.result  ctype_ucs.result  gis.result  information_schema.result  information_schema_all_engines.result  lock_sync.result  mysqld--help.result  set_statement.result  set_statement_debug.result  set_statement_profiling.result  variables.result
mysql-test/suite/archive/: archive_debug.result  discover.result  discover.test  repair.result  repair.test
mysql-test/suite/wsrep/: my.cnf  suite.pm
mysql-test/t/: connect.test  connect2.test  ctype_ucs.test  gis.test  information_schema.test  set_statement.test  set_statement_debug.test
mysys/: lf_hash.c  mf_iocache.c  mf_keycache.c  thr_lock.c  thr_mutex.c
plugin/feedback/: sender_thread.cc
plugin/handler_socket/handlersocket/: database.cpp
plugin/qc_info/: qc_info.cc
scripts/: wsrep_sst_mysqldump.sh
sql/: event_data_objects.cc  event_data_objects.h  event_db_repository.cc  event_parse_data.h  event_scheduler.cc  field.cc  field.h  ha_ndbcluster_binlog.cc  ha_partition.cc  handler.cc  handler.h  hostname.cc  item.cc  item.h  item_cmpfunc.cc  item_create.cc  item_func.cc  item_subselect.cc  item_timefunc.cc  item_timefunc.h  lex.h  lock.cc  log.cc  log_event.cc  log_event.h  mysqld.cc  mysqld.h  net_serv.cc  opt_range.cc  opt_subselect.cc  partition_info.cc  rpl_parallel.cc  scheduler.cc  scheduler.h  set_var.h  slave.cc  sp.cc  sp.h  sp_head.cc  sp_head.h  (+49 more)
sql-common/: client.c
sql/share/: errmsg-utf8.txt
storage/archive/: azio.c  ha_archive.cc  ha_archive.h
storage/innobase/: CMakeLists.txt
storage/innobase/btr/: btr0btr.cc  btr0cur.cc  btr0defragment.cc
storage/innobase/buf/: buf0buf.cc  buf0flu.cc
storage/innobase/dict/: dict0dict.cc  dict0load.cc  dict0stats_bg.cc
storage/innobase/fil/: fil0fil.cc  fil0pagecompress.cc
storage/innobase/handler/: ha_innodb.cc  ha_innodb.h  handler0alter.cc
storage/innobase/include/: btr0btr.h  buf0buf.h  dict0dict.h  dict0mem.h  fil0fil.h  ha_prototypes.h  log0recv.h  os0file.h  page0page.h  page0page.ic  srv0mon.h  srv0srv.h  srv0start.h  (+2 more)
storage/maria/: ha_maria.cc  ma_pagecache.c  ma_test1.c  ma_test2.c  ma_write.c
storage/spider/: spd_conn.cc  spd_db_conn.cc  spd_db_mysql.cc  spd_table.cc
storage/xtradb/: CMakeLists.txt
storage/xtradb/xtrabackup/src/: CMakeLists.txt  changed_page_bitmap.cc  common.h  compact.cc  datasink.c  ds_local.c  ds_stdout.c  ds_tmpfile.c  fil_cur.cc  xbcrypt.c  xbstream.c  xtrabackup.cc  xtrabackup.h  xtrabackup_version.h
tests/: mysql_client_fw.c
unittest/eperi/: pageenc-t.cc
wsrep/: wsrep_api.h  wsrep_dummy.c
(+93 files in other folders)
